--- a/style.css
+++ b/style.css
@@ -10,8 +10,45 @@ body {
 
 #background {
   grid-area: 1/1;
-  width: calc(16 * 32px);
-  height: calc(12 * 32px);
+  display: grid;
+  grid-template-columns: repeat(var(--GRID_WIDTH), max-content);
+  grid-template-rows: repeat(var(--GRID_Height), max-content);
+}
+
+#background .tile {
+  width: var(--TILE_SIZE);
+  aspect-ratio: 1/1;
+  background-repeat: no-repeat;
+  background-size: 100%;
+  image-rendering: pixelated;
+}
+
+.tile.path {
+  background-image: url("images/tiles/path.png");
+}
+
+.tile.grass {
+  background-image: url("images/tiles/grass.png");
+}
+
+.tile.water {
+  background-image: url("images/tiles/water.png");
+}
+
+.tile.wall {
+  background-image: url("images/tiles/wall.png");
+}
+
+.tile.door {
+  background-image: url("images/tiles/door.png");
+}
+
+.tile.tree {
+  background-image: url("images/tiles/tree.png");
+}
+
+.tile.floor-wood {
+  background-image: url("images/tiles/floor_wood.png");
 }
 
 #items {
@@ -28,6 +65,7 @@ body {
   background-image: url("images/Characters/Character\ 1.png");
   background-size: 400% 400%;
   image-rendering: pixelated;
+  outline: 1px black solid;
 }
 
 #player.animate {
@@ -90,4 +128,23 @@ body {
   to {
     background-position: -400% 0%;
   }
+}
+
+/* Debugging */
+.highlight {
+  outline: 2px dashed yellow;
+  translate: 0 0;
+}
+
+.show-rect {
+  outline: 2px solid red;
+}
+
+.show-reg-point::before {
+  content: "";
+  position: absolute;
+  background-color: cyan;
+  width: 3px;
+  height: 3px;
+  translate: var(--regX) var(--regY);
 }
